# nn

./: CMakeLists.txt  CreateShortcut.vbs  CreateShortcut.vbs.in  README.md  main.py  project.desktop.in  requirements.txt  run_game.bat.in  run_unix.sh.in  textgametemplate.cmd.in  uninstall.cmake.in
assets/maps/: level1.tmx
flatpak/: com.pygametemplate.dev.yml  com.textgametemplate.dev.yml
macos/: Info.plist.in
scripts/: build.py
snap/: snapcraft.yaml
src/: __init__.py  animation.py  camera.py  control.py  game.py  loader.py  settings.py  sound.py  sprites.py  test_all.py  test_control.py  test_coverage_improvements.py  test_dialogue_stats.py  test_examine_recursive.py  test_game.py  test_game_logic.py  test_inventory_bug.py  test_movement.py  test_remaining_coverage.py  test_stats.py  tests.py  time_system.py  ui.py
src/data/: global.json
src/data/characters/: guard.json  mentor.json
src/data/items/: golden_apple.json  key.json  sword.json  treasure.json
src/data/rooms/: cellar.json  garden.json  hallway.json  kitchen.json  sky_castle.json  start.json  treasure_room.json
src/data/templates/: base_npc.json
src/states/: base.py  game.py  menu.py
